--- a/opss/34. Sistemas gestores de BD.md
+++ b/opss/34. Sistemas gestores de BD.md
@@ -4,12 +4,26 @@
   - [Concepto de SGDB](#concepto-de-sgdb)
   - [SGDB en el mercado:](#sgdb-en-el-mercado)
   - [Componentes](#componentes)
+  - [Usuarios](#usuarios)
+    - [Administradores](#administradores)
+    - [Desarrolladores](#desarrolladores)
+    - [Usuarios finales](#usuarios-finales)
   - [Lenguajes de un SGDB](#lenguajes-de-un-sgdb)
+  - [Ventajas de disponer de un SGDB](#ventajas-de-disponer-de-un-sgdb)
   - [Funciones de un SGDB](#funciones-de-un-sgdb)
   - [Arquitectura de un SGDB](#arquitectura-de-un-sgdb)
+    - [Nivel interno o físico](#nivel-interno-o-f%C3%ADsico)
   - [Estructura de un SGDB](#estructura-de-un-sgdb)
+    - [Procesador de consultas](#procesador-de-consultas)
+    - [Gestor de almacenamiento](#gestor-de-almacenamiento)
+    - [Diccionario de datos](#diccionario-de-datos)
   - [Tipos de sistemas](#tipos-de-sistemas)
     - [Según modelo de datos](#seg%C3%BAn-modelo-de-datos)
+      - [Jerárquico](#jer%C3%A1rquico)
+      - [Modelo de red (ampliación del jerárquico)](#modelo-de-red-ampliaci%C3%B3n-del-jer%C3%A1rquico)
+      - [Modelo relacional](#modelo-relacional)
+      - [Modelo orientado a objetos](#modelo-orientado-a-objetos)
+      - [Modelo XML](#modelo-xml)
     - [Monousuario y multiusuario](#monousuario-y-multiusuario)
     - [Centralizado y distribuido](#centralizado-y-distribuido)
     - [Enfoque que se da a los datos](#enfoque-que-se-da-a-los-datos)
@@ -22,6 +36,22 @@
 - Ventajas e inconvenientes
 
 ## SGDB en el mercado:
+
+Sistemas disponibles en el mercado
+
+SGDB Libres
+
+PostgreSQL, SQLite
+
+SGDB gratuitos y no libres
+
+Oracle Express Edition
+
+SQL Server Compact Edition
+
+SGDB comerciales
+
+MySQL, SQL Server, Oracle, dBase
 
 Libres, gratuitos y no libres, comerciales
 
@@ -39,8 +69,38 @@ Libres, gratuitos y no libres, comerciales
   - Desarrolladores: crean programas que manipulan la BD
   - Usuarios finales: realizan consultas, introducen y actualizan datos
 - Hardware
+  - Dispositivos para el almacenamiento físico
+  - Dispositivos que permiten la gestión de los mismos (CPU, unidades E/S, etc)
+  - Puede ser un sistema de disco redundante o un servidor dedicado
 - Software
+  - Software que actúa como interfaz entre los datos y programas utilizados por usuarios
+  - Independencia entre los programas y el SGDB
+  - Acceso a datos a través del SGBD
 - Datos
+  - Información que contienen las BD así como las relaciones entre ellos
+  - Se guardan físicamente en un dispositivo de almacenamiento
+  - Los datos no aportan el conocimiento sino que deben ser interpretados
+
+## Usuarios
+
+### Administradores
+
+Definen entidades y atributos que va a tener la BD 
+Define las estructuras de almacenamiento de los datos y los métodos de acceso
+Monitoriza el rendimiento de la BD  
+Define procedimientos de respaldo y recuperación de información
+Establece control de acceso 
+Realiza el control de la concurrencia 
+Mantiene la seguridad de los datos almacenados
+
+### Desarrolladores
+
+Crean programas que manipulan la base de datos mediante consultas.
+Estos programas son los que permiten insertar, actualizar y eliminar datos
+
+### Usuarios finales
+
+Realizan consultas a la base de datos, introducen o actualizan datos, según los permisos que tengan sobre los objetos
 
 ## Lenguajes de un SGDB
 
@@ -49,6 +109,22 @@ Libres, gratuitos y no libres, comerciales
 - SDL: Definición de almacenamiento
 - DCL: Control de datos
 - VDL: Definición de vistas
+
+## Ventajas de disponer de un SGDB
+
+- Control de la redundancia de información
+- Consistencia de los datos
+- Integridad de los datos
+- Facilidad a la hora de mantener estándares establecidos
+- Datos compartidos
+- Mayor información de los datos
+- Concurrencia
+- Mayor eficiencia
+- Mayor seguridad
+- Accesibilidad a los datos
+- Mejor mantenimiento
+- Respaldo y recuperación ante fallos
+
 
 ## Funciones de un SGDB
 
@@ -64,31 +140,84 @@ Las funciones principales son:
 
 ## Arquitectura de un SGDB
 
+Para conseguir características, se crea una arquitectura de 3 niveles propuesta por el comité ANSI/SPARC en 1975
+
 La arquitectura ANSI/SPARC define 3 niveles:
 
 - Nivel físico
 - Nivel externo
 - Nivel conceptual
 
+### Nivel interno o físico
+
+Describir la estructura de almacenamiento físico de las BD
+Se utiliza un esquema interno, que describe los detalles del almacenamiento, así como los métodos de acceso.
+Contiene caminos de acceso, codificación de los datos, Gestión del espacio, Tamaño de página
+
+![](2019-05-13-13-43-45.png)
+
+![](2019-05-13-13-43-52.png)
+
 ## Estructura de un SGDB
 
+![](2019-05-13-13-45-21.png)
+
 Un SGDB está formado por los siguientes componentes:
+
+### Procesador de consultas
 
 - Precompilador
 - Compilador
 - Interprete
 - Motor de ejecución
-- Diccionario de datos
+
+### Gestor de almacenamiento
+
+- Gestor de transacción
+- Gestión de memoria intermedia
+- Gestión de archivos
+
+### Diccionario de datos
+
+Es un repositorio de información que describe los datos de la base de datos (metadatos).
+
+Ejemplo: para el módulo de control de autorización se necesitan:
+
+- Nombres de usuarios
+- Nombres de los ítems de datos
+- Permisos para cada usuario y tipo de datos, así como tipo de acceso (insert, update, etc)
+
 
 ## Tipos de sistemas
 
 ### Según modelo de datos
 
-- Jerárquico
-- Modelo de red
-- Modelo relacional
-- Modelo orientado a objetos
-- Modelo XML
+![](2019-05-13-13-46-51.png)
+
+#### Jerárquico
+
+- Información estructurada en árboles
+- Las relaciones se expresan mediante jerarquías. Al eliminar nodo padre se eliminan los hijos
+- Sólo soporta relaciones de 1 a muchos (1:N)
+
+#### Modelo de red (ampliación del jerárquico)
+
+- Estructura de datos tipo árbol, un mismo hijo puede tener varios padres (complejidad)
+- Soporta relaciones de muchos a muchos (N:M)
+
+#### Modelo relacional
+
+Conjunto de tablas que almacenan datos relacionados entre sí
+
+#### Modelo orientado a objetos
+
+Creado para trabajar con lenguajes de POO
+Posibilidad de unir datos a funciones dentro de la BD de forma transparente al usuario
+
+#### Modelo XML
+
+Almacenan los datos en documentos XML (Xpath)
+
 
 ### Monousuario y multiusuario
 
