--- a/opss/39.Lenguajesparaladefiniciónymanipulacióndedatosensistemasdebasededatosrelacionales.Tipos.Características.LenguajeSQL.-copia.docx.md
+++ b/opss/39.Lenguajesparaladefiniciónymanipulacióndedatosensistemasdebasededatosrelacionales.Tipos.Características.LenguajeSQL.-copia.docx.md
@@ -7,6 +7,7 @@
 - [Transacciones](#transacciones)
 - [Grant](#grant)
 - [Revoke](#revoke)
+- [SQL](#sql)
 
 ## Introducción
 
@@ -90,3 +91,23 @@ Podemos otorgar derecho a un usuario para autorizar a otros
 - Desautoriza privilegios
 - Podemos eliminar derecho a autorizar a otro usuario
 - Permite desautorizar en cascada. Al desautorizar a un usuario, todos los usuarios a los que el haya autorizado quedan desautorizados
+
+## SQL
+
+
+LENGUA DE CONSULTA ESTRUCTURADA EN SQL
+IBM primero trajo SQL a procesamiento de bases de datos.
+Es un lenguaje de alto nivel para crear bases de datos, manipular datos y recuperar conjuntos de datos. 
+SQL es un lenguaje no procedural, es decir, las sentencias SQL describen los datos y las operaciones de interés, pero no especifican en detalle cómo el sistema de base de datos subyacente debe satisfacer la solicitud.
+
+Los estándares ANSI para SQL fueron publicados en 1986, 1989, 1992, 1999 y 2003. 
+En la práctica, diferentes proveedores de bases de datos ofrecen SQL con pequeñas diferencias en sintaxis y semántica.
+ Para cualquier proveedor en particular, la mayoría de las sentencias SQL se ajustarán al estándar, y también habrá numerosas pequeñas diferencias. 
+Como resultado, siempre hay que complementar el conocimiento del SQL estándar con información específica del proveedor de base de datos que se está utilizando
+
+Las sentencias de SQL a menudo se distinguen como parte del lenguaje de definición de datos (DDL) o el lenguaje de manipulación de datos (DML). 
+Las sentencias DDL crean estructuras de base de datos como tablas, vistas, disparadores y procedimientos. 
+Las instrucciones DML insertan datos, actualizan datos, recuperan datos o eliminan datos en la base de datos.
+SQL no distingue entre mayúsculas y minúsculas. 
+Los comandos y los nombres se pueden introducir en mayúsculas o minúsculas. 
+Sin embargo, algunas personas tienen una preferencia de estilo para usar mayúsculas y minúsculas para separar palabras clave SQL de nombres de base de datos.
