--- a/opss/62.Arquitecturasdesistemasdecomunicaciones.Arquitecturasbasadasenniveles.Estándares..docx.md
+++ b/opss/62.Arquitecturasdesistemasdecomunicaciones.Arquitecturasbasadasenniveles.Estándares..docx.md
@@ -1,12 +1,9 @@
 # Arquitecturas de sistemas de comunicaciones
 
 - [Arquitecturas de sistemas de comunicaciones](#arquitecturas-de-sistemas-de-comunicaciones)
-  - [Introducción](#introducci%C3%B3n)
+  - [Evolución histórica](#evoluci%C3%B3n-hist%C3%B3rica)
   - [Arquitectura de los sistemas de comunicación](#arquitectura-de-los-sistemas-de-comunicaci%C3%B3n)
   - [Modelo TCP/IP](#modelo-tcpip)
-    - [ARPA](#arpa)
-    - [Finalidades](#finalidades)
-    - [4 niveles](#4-niveles)
   - [Modelo OSI](#modelo-osi)
   - [Correspondencia TCP/IP y OSI](#correspondencia-tcpip-y-osi)
   - [Niveles](#niveles)
@@ -29,7 +26,33 @@
       - [Europeos](#europeos)
       - [Españoles](#espa%C3%B1oles)
   
-## Introducción
+## Evolución histórica
+
+Años 60 - 70
+
+Protocolos de comunicaciones propietarios, incompatibles y heterogéneos
+Multiplicidad de fabricantes, plataformas, equipos, aplicaciones...
+Necesidad de una estructuración en el proceso de comunicación
+Seria preocupación por la estandarización de protocolos y fijación de criterios de normalización
+
+1973
+
+Primera arquitectura de red: TCP/IP
+Definido en 1973 (RFC 675)
+
+1974
+
+Arquitectura SNA definida por IBM
+Estructura jerárquica, basada en siete niveles o capas
+Cada capa ofrece servicios a las superiores y recibe servicios de las inferiores
+
+1984
+
+Organización Internacional de Estandarización (ISO)
+Define una arquitectura basada en los desarrollos hasta la fecha (TCP/IP, SNA, DECnet)
+Modelo OSI = Sistema Abierto de Interconexión
+Modelo más bien teórico, estructura la comunicación en siete niveles
+Sirve de referencia para la industria la hora de definir estándares
 
 ## Arquitectura de los sistemas de comunicación
 
@@ -37,14 +60,19 @@ Modelos, principio de modularidad, consideraciones a tener en cuenta
 
 ## Modelo TCP/IP
 
-### ARPA
+Características
 
-### Finalidades
+Modelo desarrollado por ARPA
 
-- Consecución de ruta óptima
+Pretende solucionar comunicación entre redes de distinta tecnología
+
+Subdivisión del problema:
+
+- Consecución de ruta óptima de la información (enrutamiento)
 - Control de la comunicación
+- Confirmación, retransmisión, reordenación
 
-### 4 niveles
+Para solucionar estos problemas TCP/IP propone arquitectura de red dividida en 4 niveles (capas):
 
 - Subred
 - Interred
