--- a/opss/65.Funcionesyserviciosdelnivelderedydelniveldetransporte.Técnicas.Protocolos.docx.md
+++ b/opss/65.Funcionesyserviciosdelnivelderedydelniveldetransporte.Técnicas.Protocolos.docx.md
@@ -15,12 +15,19 @@
       - [Asignación de direcciones](#asignaci%C3%B3n-de-direcciones)
   - [Nivel de transporte](#nivel-de-transporte)
     - [Funciones a nivel de capa de transporte**](#funciones-a-nivel-de-capa-de-transporte)
+      - [Segmentación y reensamblado](#segmentaci%C3%B3n-y-reensamblado)
+      - [Multiplexado de conexiones](#multiplexado-de-conexiones)
+      - [Entrega fiable](#entrega-fiable)
+      - [Reconstrucción ordenada de datos](#reconstrucci%C3%B3n-ordenada-de-datos)
+      - [Control de flujo](#control-de-flujo)
     - [Protocolos de capa de transporte](#protocolos-de-capa-de-transporte)
       - [TCP](#tcp)
         - [Características](#caracter%C3%ADsticas)
         - [Segmentos TCP](#segmentos-tcp)
       - [UDP](#udp)
       - [Puertos](#puertos)
+        - [Puertos registrados](#puertos-registrados)
+        - [Puertos privados](#puertos-privados)
       - [Sockets](#sockets)
   
 ## Nivel de red
@@ -65,11 +72,8 @@
 
 #### ICMP
 
-            1.  Control y notificación de errores. Complementario al
-                protocol IP
-
-            2.  Utilizado en aplicaciones como ping o traceroute
-                (diagnóstico de red)
+- Control y notificación de errores. Complementario al protocol IP
+- Utilizado en aplicaciones como ping o traceroute (diagnóstico de red)
 
 #### ARP y RARP
 
@@ -84,8 +88,10 @@
 
 ### Funciones a nivel de capa de transporte**
 
-8.  Segmentación y reensamblado
-9.  [Multiplexado de conexiones]{.underline}
+#### Segmentación y reensamblado
+
+#### Multiplexado de conexiones
+
     15. Multiplexación ascendente
         6.  Permite compartir un único circuito virtual para
             varias transmisiones
@@ -100,18 +106,23 @@
                 conexión, ACK confirmació
             2.  Transferencia de datos
             3.  Liberar conexión
-    18. [Entrega fiable]{.underline}
+
+#### Entrega fiable
+
         10. Control de errores
         11. Control de secuencia
         12. Control de pérdidas
         13. Control de duplicidades
-    19. Reconstrucción ordenada de datos
-        14. Los paquetes se pueden recibir en un orden diferente
-        15. Se tienen que reordenar y recomponer para recuperar
+
+#### Reconstrucción ordenada de datos
+
+        1.  Los paquetes se pueden recibir en un orden diferente
+        2.  Se tienen que reordenar y recomponer para recuperar
             los datos
-    20. [Control de flujo]{.underline}
-        16. Stop and wait
-        17. Ventana deslizante
+#### Control de flujo
+
+- Stop and wait
+- Ventana deslizante
 
 ### Protocolos de capa de transporte
 
@@ -152,8 +163,22 @@ Segmento UDP:
 
 #### Puertos
 
-    1.  Puertos conocidos: 21 FTP, 80 HTTP, 53 DNS.
-    2.  Puertos registrados
-    3.  Puertos dinámicos (sin restricciones)
+Según la numeración de los puertos se hace la siguiente
+clasificación para los protocolos TCP y UDP:
+
+- Los puertos inferiores a 1.024 están reservados para servicios muy definidos, como telnet, SMTP, P0P3
+- Estas asignaciones son fijas y no pueden ser utilizadas por otros servidos.
+- A menudo estos puertos son llamados «puertos bien conocidos».
+
+##### Puertos registrados
+
+- Los puertos entre 1024 y 49151 Son puertos registrados.
+- IANA intenta ordenar el uso de este rango, pero sin las restricciones que
+existen para los puertos bien conocidos.
+
+##### Puertos privados
+
+- Puertos numerados entre 49152 y 65535
+- Son puertos privados de los que se puede disponer para cualquier uso.
 
 #### Sockets
