--- a/opss/40.Diseñodebasesdedatosrelacionales.docx.md
+++ b/opss/40.Diseñodebasesdedatosrelacionales.docx.md
@@ -12,6 +12,9 @@
     - [Ejemplo de normalización](#ejemplo-de-normalizaci%C3%B3n)
   - [Diseño físico. Optimización](#dise%C3%B1o-f%C3%ADsico-optimizaci%C3%B3n)
   - [Bibliografía](#bibliograf%C3%ADa)
+  - [Construir una BD desde el modelo de datos](#construir-una-bd-desde-el-modelo-de-datos)
+    - [Primer paso](#primer-paso)
+    - [Segundo paso](#segundo-paso)
 
 ## Introducción
 
@@ -94,3 +97,30 @@ Claves
 ## Bibliografía
 
 Forth y Silberschatdz "Fundamentos de bases de datos" (McGraw-hill)
+
+
+## Construir una BD desde el modelo de datos
+
+### Primer paso
+
+crear una relación para cada entidad fuerte en el modelo de datos. 
+Cada atributo del tipo de entidad en el modelo se convertirá en un nombre de columna en la relación.
+En este momento uno debe elegir un atributo, o conjunto de atributos, llamado una clave primaria, que identificará de manera única cada fila de la relación.
+La clave ideal es corta, numérica y nunca cambia. 
+Si no hay un buen atributo clave entre los atributos de la tabla. 
+Una opción es concatenar los valores de varios campos para lograr un identificador que será único para cada fila. 
+Si este enfoque conduce a claves largas, alfanuméricas, puede ser mejor usar una clave sustituta.
+Una clave sustituta es simplemente un número, generado por el DBMS, que se asigna a cada tupla. 
+
+### Segundo paso
+
+Crear una relación para cada tipo de entidad débil y dependiente de ID. 
+Cada atributo del tipo de entidad en el modelo de datos se convierte en una columna en la nueva relación. 
+Se debe agregar una columna a la relación débil o dependiente de ID que contenga la clave externa de la tupla de entidad fuerte a la que está relacionada.
+Clave externa
+Columna en una relación, establece una relación con los datos en otra relación. 
+
+Además de los atributos de la computadora del estudiante, tales como marca y número de serie, la relación StudentComputer tendrá una columna que identifica al estudiante que posee la computadora. Si SSN es la clave de la relación Estudiante, la clave extranjera en la relación StudentComputer contendrá los valores de los números de seguro social de los estudiantes. No es necesario que los nombres de columna en las dos relaciones sean los mismos. Por lo tanto, aunque la columna clave de la | Relación de estudiante se denomina "SSN", la columna de clave externa en StudentComputer se podría llamar "StudentSSN".
+La nueva relación creada para la entidad débil también debe tener una clave primaria propia. 
+Si la entidad débil es dependiente del ID de la entidad fuerte, entonces haga que la clave de la relación dependiente del ID sea una combinación del campo de clave externa y uno o más otros atributos de la relación dependiente del ID.
+Otra aplicación de entidades dependientes de ID es el modelado de atributos multivalorados. Por ejemplo, es posible que desee proporcionar múltiples direcciones para cada estudiante; Muchos tendrán una dirección durante el año académico y otra durante el verano, por ejemplo. En tal caso, modelar una entidad dependiente de ID denominada "Dirección", y crear una relación con atributos tales como "Calle", "Ciudad", "Estado", etc., así como un atributo de clave externa que contenga valores De la clave primaria para la relación Estudiantil.
