--- a/opss/38.Modelodedatosrelacional.docx.md
+++ b/opss/38.Modelodedatosrelacional.docx.md
@@ -36,64 +36,80 @@ Revisión modelos de gestión de bases de datos
 Modelo propuesto en los años 70. Basado en el concepto matemático de
 relación, teoría de conjuntos y lógica de predicados
 
-Objetivos
+### Objetivos
 
-Independencia de datos
-
-Física: la forma en las que se almacenan los datos no afecta a su
-manipulación
-
-Lógica: los programas no influyen en la manera de manipular los datos
-
-Flexibilidad: los datos se pueden presentar a los usuarios de diferentes
-maneras
-
-Uniformidad: los datos se estructuran siempre de la misma forma
-(entidades, atributos, relaciones)
-
-Sencillez: las estructuras son sencillas y fáciles de manejar
+- Independencia de datos:
+  - Física: la forma en las que se almacenan los datos no afecta a su manipulación
+  - Lógica: los programas no influyen en la manera de manipular los datos
+- Flexibilidad:
+  - Los datos se pueden presentar a los usuarios de diferentes maneras
+- Uniformidad:
+  - Los datos se estructuran siempre de la misma forma (entidades, atributos, relaciones)
+- Sencillez:
+  - Las estructuras son sencillas y fáciles de manejar
 
 Reglas
 
-## Estructura de datos## 
+## Estructura de datos
 
 ### Entidades
 
-Entidad. 
+Entidad
 
-El mundo está formado por conjuntos de entidades del mismo tipo
-Entidades
-Se representan con rectángulos
-Sus nombres suelen ir en plural
-Las propiedades de cada entidad se ponen en globos
-Se subraya el identificador de cada entidad
+- El mundo está formado por conjuntos de entidades del mismo tipo
+- Es un objeto del mundo real, que tiene interés
+- Por ejemplo, los ALUMNOS de un centro escolar o los CLIENTES de un banco. 
 
+### Conjunto de entidades
 
-Es un objeto del mundo real, que tiene interés para la empresa. Por ejemplo, los ALUMNOS de un centro escolar o los CLIENTES de un banco. Se representa utilizando rectángulos.
-Conjunto de entidades. 
 Es un grupo de entidades del mismo tipo, por ejemplo, el conjunto de entidades cliente. Los conjuntos de entidades no necesitan ser disjuntos, se puede definir los conjuntos de entidades de empleados y clientes de un banco, pudiendo existir una persona en ambas o ninguna de las dos cosas.
-Entidad fuerte. 
-Es aquella que no depende de otra entidad para su existencia. Por ejemplo, la entidad ALUMNO es fuerte pues no depende de otra para existir, en cambio, la entidad NOTAS es una entidad débil pues necesita a la entidad ALUMNO para existir. Las entidades débiles se relacionan con la entidad fuerte con una relación uno a varios. Se representan con un rectángulo con un borde doble.
 
+Representación:
+
+- Se representan con rectángulos
+- Sus nombres suelen ir en plural
+- Las propiedades de cada entidad se ponen en globos
+- Se subraya el identificador de cada entidad
+
+### Entidad fuerte
+
+- Aquella que existe por si misma y tiene un identificador propio, formado por uno o más atributos
+- Es aquella que no depende de otra entidad para su existencia.
+
+Ejemplo:
+
+- La entidad ALUMNO es fuerte pues no depende de otra para existir
+
+### Entidad débil
+
+Las entidades débiles se relacionan con la entidad fuerte con una relación uno a varios. Se representan con un rectángulo con un borde doble.
+
+Tiene dependencia de existencia y dependencia de identificación respecto a alguna entidad fuerte
+La relación entre una entidad fuerte y una débil siempre va a ser 1:N
+
+- La entidad NOTAS es una entidad débil pues necesita a la entidad ALUMNO para existir. 
+- En modelo de colegio, grupo es una entidad débil porque no existe si no existe el curso
+- Una línea factura/albarán/pedido depende siempre de la factura/albarán/pedido en el que está. Las líneas son una entidad débil
+  
 ### Atributos o campos. 
 
-Son las unidades de información que describen propiedades de las entidades. Por ejemplo, la entidad ALUMNO posee los atributos: número de matrícula, nombre, dirección, población y teléfono. Los atributos toman valores, por ejemplo, el atributo población puede ser ALCALÁ, GUADALAJARA, etcétera. Se representan mediante una elipse con el nombre en su interior.
+Son las unidades de información que describen propiedades de las entidades. 
+
+Por ejemplo, la entidad ALUMNO posee los atributos: 
+
+- número de matrícula
+- nombre
+- dirección
+- población
+- teléfono. 
+
+Los atributos toman valores, por ejemplo, el atributo población puede ser ALCALÁ, GUADALAJARA, etcétera. 
+
+Se representan mediante una elipse con el nombre en su interior.
 
 #### Dominio
 
 Es el conjunto de valores permitido para cada atributo. Por ejemplo el dominio del atributo nombre puede ser el conjunto de cadenas de texto de una longitud determinada
-
-### Entidades fuertes y débiles
-
-Entidad fuerte
-Aquella que existe por si misma y tiene un identificador propio, formado por uno o más atributos
-Entidad débil
-Tiene dependencia de existencia y dependencia de identificación respecto a alguna entidad fuerte
-La relación entre una entidad fuerte y una débil siempre va a ser 1:N
-Ejemplos
-En modelo de colegio, grupo es una entidad débil porque no existe si no existe el curso
-Una línea factura/albarán/pedido depende siempre de la factura/albarán/pedido en el que está. Las líneas son una entidad débil
-
 
 ### Relaciones
 
@@ -102,11 +118,9 @@ Concepto
 
 Tablas, filas, tuplas, atributos o columnas
 
-Dominio: indica los valores que puede tener una columna de una relación
-
-Dominios predefinidos: entero, booleano, cadena de carateres
-
-Dominios definidos por el usuario
+- Dominio: indica los valores que puede tener una columna de una relación
+- Dominios predefinidos: entero, booleano, cadena de carateres
+- Dominios definidos por el usuario
 
 Grado de una relación: numero de columnas
 
@@ -161,7 +175,7 @@ Atributos no contengan valores nulos
 
 Impedir que ciertos atributos se repitan
 
-## Relaciones
+### Relaciones
 
 ![](2019-05-13-13-59-23.png)
 
@@ -172,10 +186,15 @@ Cuando surge una relación con atributos significa que debajo hay una entidad qu
 A esa entidad se la llama entidad asociada. 
 Esta entidad dará origen a una tabla que contendrá esos atributos. 
 Esto se hace en el modelo relacional a la hora de representar los datos..
-Conjunto de relaciones 
+
+### Conjunto de relaciones 
+
 Conjunto de relaciones del mismo tipo, por ejemplo entre ARTÍCULOS y VENTAS todas las asociaciones existentes entre los artículos y las ventas que tengan estos, forman un conjunto de relaciones.
+
 La mayoría de los conjuntos de relaciones en un sistema de BD son binarias (dos entidades) aunque puede haber conjuntos de relaciones que implican más de dos conjuntos de entidades, por ejemplo, una relación como la relación entre cliente, cuenta y sucursal. Siempre es posible sustituir un conjunto de relaciones no binario por varios conjuntos de relaciones binarias distintos. Así, conceptualmente, podemos restringir el modelo E-R para incluir sólo conjuntos binarios de relaciones, aunque no siempre es posible.
+
 La función que desempeña una entidad en una relación se llama papel, y normalmente es implícito y no se suele especificar. Sin embargo, son útiles cuando el significado de una relación necesita ser clarificado.
+
 Una relación también puede tener atributos descriptivos, por ejemplo, la FECHA_OPERACION en el conjunto de relaciones CLIENTE_CUENTA, que especifica la última fecha en la que el cliente tuvo acceso a su cuenta
 
 ### Grado de una relación
@@ -189,15 +208,19 @@ Se define grado de una relación como el número de conjuntos de entidades que p
 
 Relaciona una entidad consigo misma, se las llama relaciones reflexivas. 
 Por ejemplo, la entidad EMPLEADO puede tener una relación JEFE DE consigo misma: un empleado es JEFE DE muchos empleados y, a la vez, el jefe es un empleado.
+
 Los conjuntos de relaciones pueden tener cualquier grado, lo ideal es tener relaciones binarias.
 Otro ejemplo puede ser la relación DELEGADO DE los alumnos de un curso: el delegado es alumno también del curso. Ver Figura 1.5.
 
 ### Cardinalidades de asignación
 
 En el modelo E-R 
+
 Se representan ciertas restricciones a las que deben ajustarse los datos contenidos en una BD. 
 Éstas son las restricciones de las cardinalidades de asignación
+
 Cardinalidades de asignación
+
 Expresan el número de entidades a las que puede asociarse otra entidad mediante un conjunto de relación.
 Las cardinalidades de asignación se describen para conjuntos binarios de relaciones. Son las siguientes:
 
@@ -267,13 +290,10 @@ anteriores.
 
 ## Reglas de integridad 
 
-Reglas de integridad de usuario
-
-Reglas de integridad de modelo
-
-Integridad de unicidad de clave primaria
-
-Integridad referencial
+- Reglas de integridad de usuario
+- Reglas de integridad de modelo
+  - Integridad de unicidad de clave primaria
+  - Integridad referencial
 
 ## Manipulación de datos
 
@@ -300,12 +320,18 @@ se obtiene otra relación como resultado.
 
 ### Operaciones derivadas
 
-Intersección: tuplas que pertenecen a la vez a A y a B
+#### Intersección
 
-Combinación: concatenación de tuplas de A y B que cumplen condiciones
+tuplas que pertenecen a la vez a A y a B
+
+#### Combinación
+
+Concatenación de tuplas de A y B que cumplen condiciones
 para un valor de atributo común a ambas
 
-División: columnas de A menos columnas de B, solo tuplas que contengan
+#### División
+
+Columnas de A menos columnas de B, solo tuplas que contengan
 valores de B
 
 Natural Join
