--- a/opss/16.Sistemasoperativos.Gestióndeprocesos.docx.md
+++ b/opss/16.Sistemasoperativos.Gestióndeprocesos.docx.md
@@ -1,46 +1,45 @@
 # SO. Gestión de procesos
 
-- [SO. Gestión de procesos](#so-gesti%C3%B3n-de-procesos)
-  - [Introducción](#introducci%C3%B3n)
-    - [Relación entre el SO y los procesos](#relaci%C3%B3n-entre-el-so-y-los-procesos)
-  - [Concepto de proceso](#concepto-de-proceso)
-    - [Ejecución de un proceso](#ejecuci%C3%B3n-de-un-proceso)
-    - [Partes de un proceso](#partes-de-un-proceso)
-  - [Estados de un proceso##](#estados-de-un-proceso)
-  - [Características de un proceso](#caracter%C3%ADsticas-de-un-proceso)
-  - [Procesos padres e hijos](#procesos-padres-e-hijos)
-  - [Bloque de control de procesos](#bloque-de-control-de-procesos)
-    - [Control de procesos](#control-de-procesos)
-    - [Estructura del bloque de control de procesos](#estructura-del-bloque-de-control-de-procesos)
-    - [En programas multihilo o multihebra:](#en-programas-multihilo-o-multihebra)
-  - [Cambio de contexto](#cambio-de-contexto)
-  - [Planificación de procesos](#planificaci%C3%B3n-de-procesos)
-    - [Fases de la planificación](#fases-de-la-planificaci%C3%B3n)
-    - [Planificación](#planificaci%C3%B3n)
-    - [Planificador](#planificador)
-    - [Prioridades](#prioridades)
-    - [Aspectos a comparar](#aspectos-a-comparar)
-    - [Algoritmos de planificación](#algoritmos-de-planificaci%C3%B3n)
-      - [Tipos](#tipos)
-        - [Algoritmo FIFO (First In First Out) o FCFS (First Come First Serve)](#algoritmo-fifo-first-in-first-out-o-fcfs-first-come-first-serve)
-        - [Algoritmo Round Robin](#algoritmo-round-robin)
-        - [Colas multinivel](#colas-multinivel)
-    - [Selección del algoritmo optimo](#selecci%C3%B3n-del-algoritmo-optimo)
-  - [Comunicación entre procesos](#comunicaci%C3%B3n-entre-procesos)
-    - [Sección crítica](#secci%C3%B3n-cr%C3%ADtica)
-    - [Exclusión mutua](#exclusi%C3%B3n-mutua)
-    - [Semáforos](#sem%C3%A1foros)
-    - [Interbloqueos](#interbloqueos)
-    - [Sincronización en Java](#sincronizaci%C3%B3n-en-java)
-  - [Threads o hilos](#threads-o-hilos)
-    - [Ejemplo (Word)](#ejemplo-word)
+- [SO. Gestión de procesos](#SO-Gesti%C3%B3n-de-procesos)
+  - [Introducción](#Introducci%C3%B3n)
+    - [Relación entre el SO y los procesos](#Relaci%C3%B3n-entre-el-SO-y-los-procesos)
+  - [Concepto de proceso](#Concepto-de-proceso)
+    - [Ejecución de un proceso](#Ejecuci%C3%B3n-de-un-proceso)
+    - [Partes de un proceso](#Partes-de-un-proceso)
+  - [Estados de un proceso##](#Estados-de-un-proceso)
+  - [Características de un proceso](#Caracter%C3%ADsticas-de-un-proceso)
+  - [Procesos padres e hijos](#Procesos-padres-e-hijos)
+  - [Bloque de control de procesos](#Bloque-de-control-de-procesos)
+    - [Control de procesos](#Control-de-procesos)
+    - [Estructura del bloque de control de procesos](#Estructura-del-bloque-de-control-de-procesos)
+    - [En programas multihilo o multihebra:](#En-programas-multihilo-o-multihebra)
+  - [Cambio de contexto](#Cambio-de-contexto)
+  - [Planificación de procesos](#Planificaci%C3%B3n-de-procesos)
+    - [Fases de la planificación](#Fases-de-la-planificaci%C3%B3n)
+    - [Planificación](#Planificaci%C3%B3n)
+    - [Planificador](#Planificador)
+    - [Prioridades](#Prioridades)
+    - [Aspectos a comparar](#Aspectos-a-comparar)
+    - [Algoritmos de planificación](#Algoritmos-de-planificaci%C3%B3n)
+      - [Tipos](#Tipos)
+        - [Algoritmo FIFO (First In First Out) o FCFS (First Come First Serve)](#Algoritmo-FIFO-First-In-First-Out-o-FCFS-First-Come-First-Serve)
+        - [Algoritmo Round Robin](#Algoritmo-Round-Robin)
+        - [Colas multinivel](#Colas-multinivel)
+    - [Selección del algoritmo optimo](#Selecci%C3%B3n-del-algoritmo-optimo)
+  - [Comunicación entre procesos](#Comunicaci%C3%B3n-entre-procesos)
+    - [Sección crítica](#Secci%C3%B3n-cr%C3%ADtica)
+    - [Exclusión mutua](#Exclusi%C3%B3n-mutua)
+    - [Semáforos](#Sem%C3%A1foros)
+    - [Interbloqueos](#Interbloqueos)
+    - [Sincronización en Java](#Sincronizaci%C3%B3n-en-Java)
+  - [Threads o hilos](#Threads-o-hilos)
+    - [Ejemplo (Word)](#Ejemplo-Word)
 
 ## Introducción
 
-Un proceso puede ser pensado como un programa en ejecución.
+Un **proceso** puede ser pensado como un programa en ejecución.
 
-Un proceso necesitará ciertos recursos -como tiempo de CPU, memoria, archivos y dispositivos de
-E/S para realizar su tarea.
+Un proceso necesitará ciertos **recursos** -como tiempo de CPU, memoria, archivos y dispositivos de E/S para realizar su tarea.
 
 Estos recursos se asignan al proceso ya sea cuando se crea o mientras se está ejecutando.
 
@@ -48,7 +47,7 @@ Un proceso es la unidad de trabajo en la mayoría de los sistemas. Los sistemas 
 colección de procesos: los procesos del SO ejecutan el código del sistema y los procesos del usuario
 ejecutan el código del usuario.
 
-Todos estos procesos pueden ejecutarse simultáneamente.
+Todos estos procesos pueden ejecutarse **simultáneamente**.
 
 Aunque tradicionalmente
 
