--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/2. Unidades-medida.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/2. Unidades-medida.md
@@ -129,4 +129,9 @@ Si queremos descargar un archivo de 5 GB (5.120 MB), tardaría:
 
 1. Si una película ocupa 700 MB ¿cuántas películas caben en un DVD que tiene 4,7 GB de capacidad?
 2. Ordena de menor a mayor tamaño de los siguientes archivos: dibujo.bmp (1536 KB), carta.doc (1.048.576 bytes), cancion.mp3 (1,4 MB), video.avi (0,1 GB)
-3. ¿Cuántos DVD de 4,9 GB se necesitan para grabar el contenido de un disco duro de 1,5 TB?
+3. ¿Cuantas fotos puedes guardar en Google drive?
+4. ¿Cuántos DVD de 4,9 GB se necesitan para grabar el contenido de un disco duro de 1,5 TB?
+5. ¿Qué PS4 te comprarías si quieres tener instalados al mismo tiempo 15 juegos. ¿Por qué?
+6. Cuenta cuantos meses faltan para tu próximo cumpleaños. Imagina que cada mes haces 500 fotos por mes con tu móvil a máxima resolución y los quieres guardar en un pendrive USB. ¿Cual te comprarías? Búsca uno en Amazon que te vaya bien.
+7. Averigua qué conexión tienes en casa tú y tu compañero de la derecha. Le quieres enviar todas las fotos. ¿Cuanto tardarán en llegarle?
+8. Un amigo tiene una conexión ADSL de 10 Mbps. ¿Con qué calidad puede ver Netflix?
