--- a/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/1. Codificacion-informacion.md
+++ b/BATX TIC/TIC1/Unidades didacticas/UD1. Hardware. Componentes físicos/1. Codificacion-informacion.md
@@ -1,11 +1,26 @@
-## Codificación de la información
+# Codificación de la información
 
-### Codificación binaria
+## Sistemas de numeración
+
+Un sistema de numeración es un conjunto de símbolos y reglas que permiten representar datos numéricos. 
+
+Los sistemas de numeración actuales son sistemas posicionales. Cada símbolo tiene distinto valor según la posición que ocupa en la cifra.
+
+Ejemplos:
+
+- Decimal: 00, 01, 02, 03, 04, 05, 06, 07, 08, 09, 10, 11, 12, 13, 14, 15, 16, …
+- Binario: 000, 001, 010, 011, 100, 101, 110, 111
+- Octal: 00, 01, 02, 03, 04, 05, 06, 07, 10, 11, 12, 13, 14, ...
+- Hexadecimal: 00, 01, 02, 03, 04, 05, 06, 07, 08, 09, 0A, 0B, 0C, 0D, 0E, 0F
+
+## Sistema binario
 
 Este es el sistema utilizado por la electrónica, donde una serie de interruptores y transistores pueden tener dos estados:
 
 - Tienen corriente o no la tienen.
 - El primer caso se representa con un 1 y el segundo con un 0.
+
+El sistema binario utiliza 2 dígitos, y cada dígito tiene distinto valor dependiendo de la posición que ocupe.
 
 ![](img/2019-09-13-18-10-25.png)
 
@@ -17,18 +32,30 @@ Los ordenadores con un sistema binario para:
 
 ![](img/2019-09-13-18-08-02.png)
 
-#### Sistemas de numeración
+## Convertir de decimal a binario
 
-#### Sistema hexadecimal
+Para pasar un número decimal a binario:
+- Realizar divisiones sucesivas por 2 
+- Al final, escribir los restos obtenidos en cada división en orden inverso
 
-Este sistema cuenta con 16 dígitos (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, A, B, C, D, E, F) y se puede calcular la equivalencia entre el valor decimal de un hexa de forma similar a como se hace con los binarios, pero ahora la base de numeración es 16, valor que habrá que ir elevando a las sucesivas potencias.
+![](img/2019-09-14-11-40-42.png)
 
-Lo que hace interesante el sistema hexadecimal es la inmediatez de transformación entre un número hexa y su equivalente binario natural. Basta con escribir las cuatro cifras binarias de cada dígito para tener la equivalencia
+## Convertir de binario a decimal
+
+![](img/2019-09-14-11-58-58.png)
+
+## Sistema hexadecimal
+
+Este sistema cuenta con 16 dígitos (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, A, B, C, D, E, F) y se puede calcular la equivalencia entre el valor decimal de un hexadecimal de forma similar a como se hace con los binarios, pero ahora la base de numeración es 16, valor que habrá que ir elevando a las sucesivas potencias.
+
+Lo que hace interesante el sistema hexadecimal es la inmediatez de transformación entre un número hexadecimal y su equivalente binario natural. Basta con escribir las cuatro cifras binarias de cada dígito para tener la equivalencia
 
 Aplicaciones:
 
 - Direcciones MAC
 - Códigos de colores RGB
+
+![](img/2019-09-14-11-58-09.png)
 
 #### Convertir entre binario y hexadecimal
 
@@ -44,13 +71,39 @@ Asimismo, la conversión de un número binario a hexadecimal es igual de sencill
 
   1101101011002 --> 1101 1010 1100 -->DAC16
 
-#### Codi ASCII
+## Códificación de caracteres
 
-# Ejercicios
+# Código ASCII
 
-Decimal a binario
+La memoria de un ordenador no guarda caracteres, sino información la guarda en formato binario. Para poder guardar letras, necesito transformarlas a 1s y 0s.
 
-Convierte los siguientes números decimales al sistema binario:
+![](img/2019-09-14-11-45-49.png)
+
+El código ASCII se crea en 1963. Se inventa una tabla en la que a cada letra y una serie de símbolos (alfanuméricos y otros) se le asigna un código binario.
+
+![](img/2019-09-14-11-47-21.png)
+
+## ASCII extendido
+
+El ASCII se desarrolló para utilizarse con inglés. Por tanto no posee:
+
+- Caracteres acentuados
+- Caracteres específicos de otros idiomas
+
+Para codificar estos caracteres, se necesitaba un sistema de códigos distinto. Necesitamos más caracteres, con 7 bits no basta (128 máximo) y 32 son caracteres de control
+
+El Código ASCII se extendió a 8 bits (byte). Se pueden codificar más caracteres (ASCII extendido),hasta 256
+
+![](img/2019-09-14-11-47-12.png)
+
+Para no romper la compatibilidad con ASCII, se hace que el primer bit signifique
+
+- 0: Los 7 bits inferiores siguen la tabla ASCII
+- 1: Los 7 bits inferiores siguen otra tabla
+
+## Ejercicios
+
+1.Convierte los siguientes números decimales al sistema binario:
 
     31
     65
@@ -58,40 +111,37 @@ Convierte los siguientes números decimales al sistema binario:
     144
     256
 
-Binario a decimal
-
-Convierte los siguientes números binarios a decimal:
+2.Convierte los siguientes números binarios a decimal:
 
         11011101
         1000001
         11101110
         1110001101
 
-Binario / hexadecimal
-
-Convierte los siguientes números binarios al sistema hexadecimal:
+3.Convierte los siguientes números binarios al sistema hexadecimal:
 
         110010001011101
         1000111110001011101
         11011000100101
 
-Convierte los siguientes números hexadecimales al sistema binario:
+4.Convierte los siguientes números hexadecimales al sistema binario:
 
         AB34
         F22
         344
 
-Octal / binario
+5.Averigua cuántos números pueden representarse con 8, 10, 16 y 32 bits y cuál es el número más grande que puede escribirse en cada caso.
 
-Convierte los siguientes números binarios al sistema octal:
+6.Dados dos números binarios: 01001000 y 01000100 ¿Cuál de ellos es el mayor? ¿Podrías compararlos sin necesidad de convertirlos al sistema decimal?
 
-    1100101101
-    1000111101
-    11011001
+7.Escribe los nombres de tus compañeros de la derecha e izquierda tuyos en ASCII.
 
-Convierte los siguientes números en octal al sistema binario:
+8.Convierte la fecha de tu cumpleaños en binario. ¿Cuantos bits necesitarías?
 
-    53
-    67
-    77
+9.¿Cuantos KB se necesitan aproximadamente para guardar todos los nombres y fechas de nacimiento de todos los alumnos del colegio?
 
+10.¿Cómo sabrías si un numero binario es par o impar sin con
+
+## Practicar online
+
+![](img/2019-09-14-11-43-17.png)
